tests/snapshots/bans__allow_path_wildcards_public_package.snap
---
source: tests/bans.rs
expression: diags
---
[
  {
    "fields": {
      "code": "wildcard",
      "graphs": [
        {
          "Krate": {
            "name": "wildcards-test-allow-paths-public",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 41,
          "line": 9,
          "message": "wildcard dependency",
          "span": "{ path = \"../allow-paths-dependency\" }"
        }
      ],
      "message": "found 1 wildcard dependency for crate 'wildcards-test-allow-paths-public'. allow-wildcard-paths is enabled, but does not apply to public crates as crates.io disallows path dependencies.",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
