tests/snapshots/bans__allow_wrappers.snap
---
source: tests/bans.rs
expression: diags
---
[
  {
    "fields": {
      "code": "B008",
      "graphs": [
        {
          "Krate": {
            "name": "dangerous-dep",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "safe-wrapper",
                "version": "0.1.0"
              },
              "parents": [
                {
                  "Krate": {
                    "name": "allow-wrappers-crate",
                    "version": "0.1.0"
                  }
                }
              ]
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 8,
          "line": 3,
          "message": "banned here",
          "span": "dangerous-dep"
        },
        {
          "column": 13,
          "line": 4,
          "message": "allowed wrapper",
          "span": "safe-wrapper"
        }
      ],
      "message": "banned crate 'dangerous-dep = 0.1.0' allowed by wrapper 'safe-wrapper = 0.1.0'",
      "severity": "note"
    },
    "type": "diagnostic"
  }
]
