tests/snapshots/bans__deny_wildcards.snap
---
source: tests/bans.rs
expression: diags
---
[
  {
    "fields": {
      "code": "wildcard",
      "graphs": [
        {
          "Krate": {
            "name": "wildcards-test-crate",
            "version": "0.1.0"
          }
        }
      ],
      "labels": [
        {
          "column": 14,
          "line": 9,
          "message": "wildcard dependency",
          "span": "*"
        }
      ],
      "message": "found 1 wildcard dependency for crate 'wildcards-test-crate'",
      "severity": "error"
    },
    "type": "diagnostic"
  },
  {
    "fields": {
      "code": "wildcard",
      "graphs": [
        {
          "Krate": {
            "name": "wildcards-test-dep",
            "version": "0.1.0"
          },
          "parents": [
            {
              "Krate": {
                "name": "wildcards-test-crate",
                "version": "0.1.0"
              }
            }
          ]
        }
      ],
      "labels": [
        {
          "column": 9,
          "line": 9,
          "message": "wildcard dependency",
          "span": "*"
        }
      ],
      "message": "found 1 wildcard dependency for crate 'wildcards-test-dep'",
      "severity": "error"
    },
    "type": "diagnostic"
  }
]
